@@ -2,6 +2,7 @@ Gnumeric 1.12.57
 
 Morten:
 	* Fix touchpad scrolling on Wayland.  [#678]
+	* Fix ods auto-filter import problem.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.56
